--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "make_argocd_fly"
-version = "0.0.3"
+version = "0.0.5"
 authors = [
     {name = "Andrei Lapin", email = "karandash8@gmail.com"},
 ]
@@ -24,5 +24,5 @@ make-argocd-fly = "make_argocd_fly.pipeline:main"
 find = {}
 
 [tool.setuptools.dynamic]
-readme = {file = ["README.md"]}
+readme = {file = ["README.md"], content-type = "text/markdown"}
 dependencies = {file = ["requirements.txt"]}
