- temporary dir is used for kustomize run only; - jinja2 rendering happens on the source tree build; - refactoring; - argocd Application resources are auto generated based on the config; - changed config format; - readme update

--- a/config.yml
+++ b/config.yml
@@ -3,12 +3,59 @@ config:
   output_dir: output
   tmp_dir: .tmp
 
+# caveat: 'bootstrap' application shall be deployed externally
+# caveat: if there is an argocd deployment per environment then app_deployer applications shall have different names for different environments
 envs:
-  - dev
-  - stage
-  - prod
+  management:
+    apps:
+      bootstrap: {}
+      core_deployer:
+        app_deployer: bootstrap
+        project: default
+        destination_namespace: kube-system
+      service_deployer:
+        app_deployer: bootstrap
+        project: default
+        destination_namespace: kube-system
+      app_1:
+        app_deployer: core_deployer
+        project: management
+        destination_namespace: kube-default
+      app_2:
+        app_deployer: core_deployer
+        project: management
+        destination_namespace: kube-default
+      app_3:
+        app_deployer: service_deployer
+        project: management
+        destination_namespace: kube-default
+      app_4:
+        app_deployer: service_deployer
+        project: management
+        destination_namespace: kube-default
+    params:
+      argocd_namespace: argocd
+      repo_url: url
+      target_revision: revision
+      api_server: management-api-server
+  external_1:
+    apps:
+      app_1:
+        app_deployer: core_deployer
+        project: external_1
+        destination_namespace: kube-default
+      app_4:
+        app_deployer: service_deployer
+        project: external_1
+        destination_namespace: kube-default
+    params:
+      argocd_namespace: argocd
+      repo_url: url
+      target_revision: revision
+      api_server: external_1-api-server
 
+# caveat: the folloving variable names are resenved: _application_name, _argocd_namespace, _project, _repo_url, _target_revision, _path, _api_server, _destination_namespace
 vars:
-  namespace: kek-system
+  namespace: kube-system
   app:
     resource: deployment.yml
