- kustomize errors are forwarded to the user; - rendered resources are named `resource-type_resource-name.yml` and written one resource per file; - added unit tests; - refactoring

--- a/config.yml
+++ b/config.yml
@@ -38,5 +38,5 @@ envs:
 vars:
   namespace: kube-system
   app:
-    resource: deployment.yml
+    resource: Deployment_thanos.yml
   json_var: json
