--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,8 @@ envs:
       app_4: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_5: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_6: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
+      subdirectory/app_7: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
+      subdirectory_2/app_8: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
     vars:
       argocd:
         api_server: management-api-server
@@ -25,6 +27,7 @@ envs:
       app_1: {app_deployer: core_deployer, project: external_1, destination_namespace: kube-default}
       app_2: {app_deployer: core_deployer, project: management, destination_namespace: kube-default}
       app_5: {app_deployer: service_deployer, project: external_1, destination_namespace: kube-default}
+      subdirectory/app_7: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
     vars:
       argocd:
         api_server: external_1-api-server
