--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-source/
-output/
-.tmp/
+**/.tmp/
 .vscode
-config.yml
-
-
