--- a/.github/workflows/tests-run.yml
+++ b/.github/workflows/tests-run.yml
@@ -4,8 +4,6 @@
 name: Run pytest
 
 on:
-  push:
-    branches: [ "*" ]
   pull_request:
     branches: [ "main" ]
 
@@ -21,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: '3.10'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
