Use plain kustomize
misc: update manual tests

--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -1,6 +1,6 @@
-source_dir: tests/manual/source
-output_dir: tests/manual/output
-tmp_dir: tests/manual/.tmp
+source_dir: source
+output_dir: output
+tmp_dir: .tmp
 
 # caveat: the folloving variable names are resenved: __application
 vars:
