--- a/tests/manual/source/app_2/base/kustomization.yml
+++ b/tests/manual/source/app_2/base/kustomization.yml
@@ -7,12 +7,12 @@ resources:
   - Deployment_prometheus-2.yml
   - Service_prometheus.yml
 
-patchesStrategicMerge:
-- |-
-  kind: Deployment
-  apiVersion: apps/v1
-  metadata:
-    name: prometheus
-    namespace: monitoring
-  spec:
-    param: base
+patches:
+  - patch: |-
+      kind: Deployment
+      apiVersion: apps/v1
+      metadata:
+        name: prometheus
+        namespace: monitoring
+      spec:
+        param: base
