--- a/tests/manual/output/management/core_deployer/Application_app-2-management.yml
+++ b/tests/manual/output/management/core_deployer/Application_app-2-management.yml
@@ -3,8 +3,7 @@ kind: Application
 metadata:
   name: app-2-management
   namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
+  finalizers: []
 spec:
   project: management
   source:
@@ -17,3 +16,14 @@ spec:
   syncPolicy:
     syncOptions:
     - ServerSideApply=true
+  ignoreDifferences:
+  - group: apps
+    jsonPointers:
+    - /spec/replicas
+    kind: Deployment
+    name: guestbook
+    namespace: default
+  - group: storage.k8s.io
+    jqPathExpressions:
+    - .spec.seLinuxMount
+    kind: CSIDriver
