Introduce debug logging
misc: adapt log levels

--- a/make_argocd_fly/log_config.yml
+++ b/make_argocd_fly/log_config.yml
@@ -11,7 +11,7 @@ handlers:
     stream: ext://sys.stdout
 loggers:
   root:
-    level: DEBUG
+    level: INFO
     handlers:
       - console
     propagate: no
