--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   build:
     name: Build make-argocd-fly
-    runs-on: self-hosted
+    runs-on: home-use
 
     steps:
     - uses: actions/checkout@v3
@@ -42,7 +42,7 @@ jobs:
     name: Publish make-argocd-fly to TestPyPI
     needs:
     - build
-    runs-on: self-hosted
+    runs-on: home-use
 
     environment:
       name: testpypi
@@ -66,7 +66,7 @@ jobs:
     name: Publish make-argocd-fly to PyPI
     needs:
     - publish-to-testpypi
-    runs-on: self-hosted
+    runs-on: home-use
 
     environment:
       name: pypi
