--- a/.github/workflows/tests-run.yml
+++ b/.github/workflows/tests-run.yml
@@ -16,11 +16,18 @@ jobs:
     runs-on: home-use
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v4
+    - if: ${{ matrix.arch == 'arm64' }}
+      name: Set up Python
+      uses: deadsnakes/action@v2.1.1
+      with:
+        python-version: "3.10"
+    - if: ${{ matrix.arch == 'amd64' }}
+      name: Set up Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -38,11 +45,18 @@ jobs:
     runs-on: home-use
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v4
+   - if: ${{ matrix.arch == 'arm64' }}
+      name: Set up Python
+      uses: deadsnakes/action@v2.1.1
+      with:
+        python-version: "3.10"
+    - if: ${{ matrix.arch == 'amd64' }}
+      name: Set up Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
