--- a/.github/workflows/tests-run.yml
+++ b/.github/workflows/tests-run.yml
@@ -17,17 +17,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - if: ${{ matrix.arch == 'arm64' }}
+    - if: ${{ runner.arch == 'arm64' }}
       name: Set up Python
       uses: deadsnakes/action@v2.1.1
       with:
         python-version: "3.10"
-    - if: ${{ matrix.arch == 'amd64' }}
+    - if: ${{ runner.arch == 'amd64' }}
       name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -46,17 +45,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - if: ${{ matrix.arch == 'arm64' }}
+    - if: ${{ runner.arch == 'arm64' }}
       name: Set up Python
       uses: deadsnakes/action@v2.1.1
       with:
         python-version: "3.10"
-    - if: ${{ matrix.arch == 'amd64' }}
+    - if: ${{ runner.arch == 'amd64' }}
       name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
