--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         # https://github.com/actions/checkout/issues/1471
         fetch-depth: 0
-        filter: tree:0
+        fetch-tags: true
     - if: ${{ runner.arch == 'arm64' }}
       name: Set up Python
       uses: deadsnakes/action@v3.1.0
