--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -21,11 +21,18 @@ jobs:
     runs-on: home-use
 
     steps:
+    # https://github.com/actions/checkout/issues/335
+    - name: Force Install GIT latest
+      run: |
+        sudo apt-get install -y software-properties-common \
+        && sudo apt-get update \
+        && sudo add-apt-repository -y ppa:git-core/ppa \
+        && sudo apt-get update \
+        && sudo apt-get install -y git
     - uses: actions/checkout@v4
-      with:
-        # https://github.com/actions/checkout/issues/1471
-        fetch-depth: 0
-        fetch-tags: true
+    # https://github.com/actions/checkout/issues/335
+    - name: Get tags
+      run: git fetch --tags origin
     - if: ${{ runner.arch == 'arm64' }}
       name: Set up Python
       uses: deadsnakes/action@v3.1.0
@@ -38,7 +45,7 @@ jobs:
         python-version: '3.11'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
         pip install build
     - name: Build package
       run: python -m build
