--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -95,7 +95,12 @@ jobs:
           chmod +x /app/twine-upload.sh
       - name: Publish package to TestPyPI
         run: |
-          PYTHONPATH=/usr/lib/python3/site-packages INPUT_USER=__token__ INPUT_PASSWORD="" INPUT_VERBOSE=true INPUT_REPOSITORY_URL=https://test.pypi.org/legacy/ /app/twine-upload.sh --verify-metadata true --skip-existing false --print-hash false --repository-url https://test.pypi.org/legacy/ --packages-dir dist
+          PYTHONPATH=/usr/lib/python3/site-packages \
+          INPUT_USER=__token__ \
+          INPUT_PASSWORD="" \
+          INPUT_VERBOSE=true \
+          INPUT_REPOSITORY_URL=https://test.pypi.org/legacy/ \
+          /app/twine-upload.sh --verify-metadata true --skip-existing false --print-hash false --repository-url https://test.pypi.org/legacy/ --packages-dir /home/runner/dist
 
 
   # publish-to-testpypi:
