--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -104,7 +104,7 @@ jobs:
             --skip-existing false \
             --print-hash false \
             --repository-url https://test.pypi.org/legacy/ \
-            --packages-dir /home/runner/_work/dist
+            --packages-dir /home/runner/_work/make-argocd-fly/make-argocd-fly/dist
 
 
 
